--- a/CS50 -笔记.md
+++ b/CS50 -笔记.md
@@ -824,3 +824,9 @@ install :
 script:
   - python manage.py test
 ```
+# githunb操作
+进入github classroom网页  
+点fork创建自己的分支  
+克隆到自己的目录 `` git clone https://github.com/junxiuliu/classroom.git ``  
+
+
