更新 CS50笔记 ---增加lesson10

--- a/CS50 -笔记.md
+++ b/CS50 -笔记.md
@@ -1,25 +1,25 @@
-## PostgreSQL°²×°
+## PostgreSQLå®‰è£…
 
-postgresÁ¬½Ó²»µ½Êı¾İ¿â  
-services.mscÖĞÕÒ²»µ½PostgreSQL·şÎñ£º  
-cmd¹ÜÀíÔ±Ä£Ê½Æô¶¯·şÎñ£º  
+postgresè¿æ¥ä¸åˆ°æ•°æ®åº“  
+services.mscä¸­æ‰¾ä¸åˆ°PostgreSQLæœåŠ¡ï¼š  
+cmdç®¡ç†å‘˜æ¨¡å¼å¯åŠ¨æœåŠ¡ï¼š  
 D:\postgres\postgres--12.3\bin\pg_ctl register -N PostgreSQL  -D "D:\postgres\postgres--12.3\data"  
-ÔÙÈ¥²é¿´£¬ÊÖ¶¯Æô¶¯·şÎñ  
+å†å»æŸ¥çœ‹ï¼Œæ‰‹åŠ¨å¯åŠ¨æœåŠ¡  
 
---Ö´ĞĞÓï¾äÒª¼Ó·ÖºÅ
+--æ‰§è¡Œè¯­å¥è¦åŠ åˆ†å·
 ```
 Server [localhost]: 127.0.0.1
 Database [postgres]: postgres
 Port [5432]: 5432
 Username [postgres]: postgres
-ÓÃ»§ postgres µÄ¿ÚÁî£º
+ç”¨æˆ· postgres çš„å£ä»¤ï¼š
 psql (12.3)
-ÊäÈë "help" À´»ñÈ¡°ïÖúĞÅÏ¢.
+è¾“å…¥ "help" æ¥è·å–å¸®åŠ©ä¿¡æ¯.
 
 postgres=#
 
 ```
-## CREAT ½¨±í
+## CREAT å»ºè¡¨
 
 ```
 postgres=# CREATE TABLE flights(
@@ -32,17 +32,17 @@ CREATE TABLE
 ```
 
 
-\d ²é¿´µ±Ç°±íµÄĞÅÏ¢  
+\d æŸ¥çœ‹å½“å‰è¡¨çš„ä¿¡æ¯  
 
 ```
 postgres=# \d
-                   ¹ØÁªÁĞ±í
- ¼Ü¹¹Ä£Ê½ |      Ãû³Æ      |  ÀàĞÍ  |  ÓµÓĞÕß
+                   å…³è”åˆ—è¡¨
+ æ¶æ„æ¨¡å¼ |      åç§°      |  ç±»å‹  |  æ‹¥æœ‰è€…
 ----------+----------------+--------+----------
- public   | flights        | Êı¾İ±í | postgres
- public   | flights_id_seq | ĞòÁĞÊı | postgres
+ public   | flights        | æ•°æ®è¡¨ | postgres
+ public   | flights_id_seq | åºåˆ—æ•° | postgres
 ```
-## constraints³£ÓÃÔ¼Êø  
+## constraintså¸¸ç”¨çº¦æŸ  
 ```
 not NULL
 unique
@@ -50,7 +50,7 @@ primary KEY
 default
 check
 ```
-## INSERT ²åÈë
+## INSERT æ’å…¥
 ```
 postgres=# insert into flights (origin, destination,duration) values('New York','London',415);
 INSERT 0 1
@@ -60,7 +60,7 @@ insert into flights (origin, destination,duration) values('Moscow','Paris',415);
 insert into flights (origin, destination,duration) values('New York','Paris',435);
 ```
 
-## SELECT ²éÑ¯  
+## SELECT æŸ¥è¯¢  
 
 ```
 postgres=# select * from flights;
@@ -71,16 +71,16 @@ postgres=# select * from flights;
   3 | Istanbul | Tokyo       |      700
   4 | Moscow   | Paris       |      415
   5 | New York | Paris       |      435
-(5 ĞĞ¼ÇÂ¼)
+(5 è¡Œè®°å½•)
 ```
-¼ÓwhereÌõ¼şµÄ²éÑ¯  
+åŠ whereæ¡ä»¶çš„æŸ¥è¯¢  
 ```
 postgres=# select * from flights where origin='New York';
  id |  origin  | destination | duration
 ----+----------+-------------+----------
   1 | New York | London      |      415
   5 | New York | Paris       |      435
-(2 ĞĞ¼ÇÂ¼)
+(2 è¡Œè®°å½•)
 
 
 postgres=# select * from flights where duration>500;
@@ -88,43 +88,43 @@ postgres=# select * from flights where duration>500;
 ----+----------+-------------+----------
   2 | Shanghai | Paris       |      760
   3 | Istanbul | Tokyo       |      700
-(2 ĞĞ¼ÇÂ¼)
+(2 è¡Œè®°å½•)
 
 
 postgres=# select * from flights where id=3;
  id |  origin  | destination | duration
 ----+----------+-------------+----------
   3 | Istanbul | Tokyo       |      700
-(1 ĞĞ¼ÇÂ¼)
+(1 è¡Œè®°å½•)
 
 
 postgres=# select * from flights where destination='Paris' and duration>500;
  id |  origin  | destination | duration
 ----+----------+-------------+----------
   2 | Shanghai | Paris       |      760
-(1 ĞĞ¼ÇÂ¼)
+(1 è¡Œè®°å½•)
 ```
-Ôö¼Óº¯Êı¹¦ÄÜ  
+å¢åŠ å‡½æ•°åŠŸèƒ½  
 ```
 postgres=# select avg(duration) from flights;
          avg
 ----------------------
  545.0000000000000000
-(1 ĞĞ¼ÇÂ¼)
+(1 è¡Œè®°å½•)
 
 
 postgres=# select count(*) from flights;
  count
 -------
      5
-(1 ĞĞ¼ÇÂ¼)
+(1 è¡Œè®°å½•)
 
 
 postgres=# select count(*) from flights where origin='New York';
  count
 -------
      2
-(1 ĞĞ¼ÇÂ¼)
+(1 è¡Œè®°å½•)
 ```
 ## IN LIKE
 ```
@@ -134,22 +134,22 @@ postgres=# select * from flights where origin like '%a%';
 ----+----------+-------------+----------
   2 | Shanghai | Paris       |      760
   3 | Istanbul | Tokyo       |      700
-(2 ĞĞ¼ÇÂ¼)
+(2 è¡Œè®°å½•)
 ```
 ## FUNCTION
 sum  count  min  max  avg  
-## UPDATE  ¸üĞÂ  
+## UPDATE  æ›´æ–°  
 
 ```
 postgres=# update flights set duration=430 where origin='New York' and destination ='London';
 UPDATE 1
 ```
-## DELETE É¾³ı  
+## DELETE åˆ é™¤  
 ```
 postgres=# delete from flights where destination='Tokyo';
 DELETE 1
 ```
-## GROUP BY ·Ö×é   
+## GROUP BY åˆ†ç»„   
 
 ```
 postgres=# select * from flights limit 2;
@@ -157,7 +157,7 @@ postgres=# select * from flights limit 2;
 ----+----------+-------------+----------
   2 | Shanghai | Paris       |      760
   4 | Moscow   | Paris       |      415
-(2 ĞĞ¼ÇÂ¼)
+(2 è¡Œè®°å½•)
 
 postgres=# select * from flights order by duration asc;
  id |  origin  | destination | duration
@@ -167,7 +167,7 @@ postgres=# select * from flights order by duration asc;
   5 | New York | Paris       |      435
   6 | Istanbul | Tokyo       |      700
   2 | Shanghai | Paris       |      760
-(5 ĞĞ¼ÇÂ¼)
+(5 è¡Œè®°å½•)
 
 postgres=# select origin,count(*) from flights group by origin;
   origin  | count
@@ -176,17 +176,17 @@ postgres=# select origin,count(*) from flights group by origin;
  Moscow   |     1
  Istanbul |     1
  New York |     2
-(4 ĞĞ¼ÇÂ¼)
+(4 è¡Œè®°å½•)
 
 postgres=# select origin,count(*) from flights group by origin having count(*)>1;
   origin  | count
 ----------+-------
  New York |     2
-(1 ĞĞ¼ÇÂ¼)
+(1 è¡Œè®°å½•)
 ```
-## Foreign Keys Íâ¼ü  
+## Foreign Keys å¤–é”®  
 used to connect multiple tables  
-½¨Ò»¸öpassengers±í  
+å»ºä¸€ä¸ªpassengersè¡¨  
 ```
 CREATE TABLE passengers (
     id SERIAL PRIMARY KEY,
@@ -194,23 +194,23 @@ CREATE TABLE passengers (
     flight_id INTEGER REFERENCES flights
 )
 ```
-²éÑ¯Ò»¸ö³Ë¿ÍµÄº½°àĞèÒªÁ½´Î²éÑ¯  
+æŸ¥è¯¢ä¸€ä¸ªä¹˜å®¢çš„èˆªç­éœ€è¦ä¸¤æ¬¡æŸ¥è¯¢  
 ```
 postgres=# select * from passengers where name='Alice';
  id | name  | flight_id
 ----+-------+-----------
   1 | Alice |         1
-(1 ĞĞ¼ÇÂ¼)
+(1 è¡Œè®°å½•)
 
 postgres=# select * from flights where id =1;
  id |  origin  | destination | duration
 ----+----------+-------------+----------
   1 | New York | London      |      430
-(1 ĞĞ¼ÇÂ¼)
+(1 è¡Œè®°å½•)
 ```
 ## JOIN
 
-ÓÃJOINÁ¬½ÓÁ½¸ö±í£¬ONÁ½¸ö±íÁ¬½ÓµÄÌõ¼ş  
+ç”¨JOINè¿æ¥ä¸¤ä¸ªè¡¨ï¼ŒONä¸¤ä¸ªè¡¨è¿æ¥çš„æ¡ä»¶  
 **inner join**  only get the things that match  
 ```
 postgres=# select origin,destination,name from flights JOIN passengers ON
@@ -224,7 +224,7 @@ postgres-# passengers.flight_id = flights.id;
  Moscow   | Paris       | Erin
  Istanbul | Tokyo       | Frank
  Istanbul | Tokyo       | Grace
-(7 ĞĞ¼ÇÂ¼)
+(7 è¡Œè®°å½•)
 ```
 
 **left join**  
@@ -241,7 +241,7 @@ postgres-# passengers.flight_id = flights.id;
  Istanbul | Tokyo       | Frank
  Istanbul | Tokyo       | Grace
  New York | Paris       |
-(8 ĞĞ¼ÇÂ¼)
+(8 è¡Œè®°å½•)
 ```
 
 ## CREATE INDEX
@@ -256,47 +256,47 @@ postgres-# (select flight_id from passengers group by flight_id having count(*)>
   2 | Shanghai | Paris       |      760
   1 | New York | London      |      430
   6 | Istanbul | Tokyo       |      700
-(3 ĞĞ¼ÇÂ¼)
+(3 è¡Œè®°å½•)
 ```
 # SQL and Python
-## »·¾³ÅäÖÃ
+## ç¯å¢ƒé…ç½®
 pip install psycopg2  
 ## SQLAlchemy
 engine: manage connections to the databases
 ```
-#Ïê¼ûlist.py,import.py,passengers.py
+#è¯¦è§list.py,import.py,passengers.py
 from sqlalchemy import creat_engine
 engine = creat_engine(os.getenv("DATABASE_URL"))
 ```
-select Êı¾İ
-insert Êı¾İ .csvÎÄ¼ş
+select æ•°æ®
+insert æ•°æ® .csvæ–‡ä»¶
 
 read a csv file and insert it into table
-db.execute("·ÅSQLÓï¾ä£¬Éæ¼°±äÁ¿ÓÃplaceholder",{"placeholderÃû"£ºvariebal})  
-## flaskÓ¦ÓÃ
+db.execute("æ”¾SQLè¯­å¥ï¼Œæ¶‰åŠå˜é‡ç”¨placeholder",{"placeholderå"ï¼švariebal})  
+## flaskåº”ç”¨
 
 
 application.py  
-### »·¾³±äÁ¿ÉèÖÃ£º
+### ç¯å¢ƒå˜é‡è®¾ç½®ï¼š
 linux export FLASK_APP=application.py  
 windows set FLASK_APP=application.py  
 ```
-#Èç¹û¼Ómethods,¼ÇµÃÓĞs
+#å¦‚æœåŠ methods,è®°å¾—æœ‰s
 @app.route("/page1",methods=["POST"])
 @app.route("/")
 def index():
-    #´ÓÊı¾İ¿âÀïÈ¡ËùÓĞº½°àĞÅÏ¢µÄÊı¾İ¸³Öµ¸øflights
+    #ä»æ•°æ®åº“é‡Œå–æ‰€æœ‰èˆªç­ä¿¡æ¯çš„æ•°æ®èµ‹å€¼ç»™flights
     flights=db.execute("select * from flights").fetchall()
-    #·µ»ØhtmlÎÄ¼ş
+    #è¿”å›htmlæ–‡ä»¶
     return render_template("index3.html",flights=flights)
 ```
 ## HTML
 a **form** is a place where users can fill in information  
 a **select** is a drop down menu
-formÏÂ¿ÉÒÔÓĞ<input>  
-<input> class:cssÀà placeholder:ÏÔÊ¾ÔÚinputÉÏµÄÌáÊ¾Ãû³Æ    
+formä¸‹å¯ä»¥æœ‰<input>  
+<input> class:cssç±» placeholder:æ˜¾ç¤ºåœ¨inputä¸Šçš„æç¤ºåç§°    
 ```
-url_for ¶ÔÓ¦python routeÀïµÄÂ·¾¶
+url_for å¯¹åº”python routeé‡Œçš„è·¯å¾„
 <form action="{{ url_for('book') }}" method="post">
   <input class="form-control" name="name" placeholder="Passenger Name">
   <select class="form-control" name="flight_id">
@@ -306,26 +306,26 @@ url_for ¶ÔÓ¦python routeÀïµÄÂ·¾¶
   </select>
 ```
 
-## ±¨´í 
+## æŠ¥é”™ 
 TypeError: __init__() got an unexpected keyword argument 'method'   
 
-## getÓëpost
-getÇëÇó£º
+## getä¸post
+getè¯·æ±‚ï¼š
 
-Ê¹ÓÃ³¡¾°£ºÈç¹ûÖ»¶Ô·şÎñÆ÷»ñÈ¡Êı¾İ£¬²¢Ã»ÓĞ¶Ô·şÎñÆ÷²úÉúÈÎºÎÓ°Ïì£¬ÄÇÃ´ÕâÊ±ºòÊ¹ÓÃgetÇëÇó¡£
+ä½¿ç”¨åœºæ™¯ï¼šå¦‚æœåªå¯¹æœåŠ¡å™¨è·å–æ•°æ®ï¼Œå¹¶æ²¡æœ‰å¯¹æœåŠ¡å™¨äº§ç”Ÿä»»ä½•å½±å“ï¼Œé‚£ä¹ˆè¿™æ—¶å€™ä½¿ç”¨getè¯·æ±‚ã€‚
 
-´«²Î£ºgetÇëÇó´«²ÎÊÇ·ÅÔÚurlÖĞ£¬²¢ÇÒÊÇÍ¨¹ı¡¯?¡¯µÄĞÎÊ½À´Ö¸¶¨keyºÍvalueµÄ¡£
+ä¼ å‚ï¼šgetè¯·æ±‚ä¼ å‚æ˜¯æ”¾åœ¨urlä¸­ï¼Œå¹¶ä¸”æ˜¯é€šè¿‡â€™?â€™çš„å½¢å¼æ¥æŒ‡å®škeyå’Œvalueçš„ã€‚
 
-postÇëÇó£º
+postè¯·æ±‚ï¼š
 
-Ê¹ÓÃ³¡¾°£ºÈç¹ûÒª¶Ô·şÎñÆ÷²úÉúÓ°Ïì£¬ÄÇÃ´Ê¹ÓÃpostÇëÇó
+ä½¿ç”¨åœºæ™¯ï¼šå¦‚æœè¦å¯¹æœåŠ¡å™¨äº§ç”Ÿå½±å“ï¼Œé‚£ä¹ˆä½¿ç”¨postè¯·æ±‚
 
-´«²Î£ºpostÇëÇó´«²Î²»ÊÇ·ÅÔÚurlÖĞ£¬ÊÇÍ¨¹ı¡¯form data¡¯µÄĞÎÊ½·¢ËÍ¸ø·şÎñÆ÷µÄ  
+ä¼ å‚ï¼špostè¯·æ±‚ä¼ å‚ä¸æ˜¯æ”¾åœ¨urlä¸­ï¼Œæ˜¯é€šè¿‡â€™form dataâ€™çš„å½¢å¼å‘é€ç»™æœåŠ¡å™¨çš„  
 
 ## SQLAlchemy  
-ÓÃ.pyµÄ·½Ê½ÊµÏÖÊı¾İ¿âµÄ½¨±í¡¢²åÈëµÈ  
+ç”¨.pyçš„æ–¹å¼å®ç°æ•°æ®åº“çš„å»ºè¡¨ã€æ’å…¥ç­‰  
 ### create table
-ĞèÒªmodels.pyÎÄ¼ş
+éœ€è¦models.pyæ–‡ä»¶
 ab.create_all()  
 will take our classes and just automatically create all of those tables  
 ### update
@@ -342,7 +342,7 @@ flight = Flight.query.get(28)
 db.session.delete(flight)
 db.session.commit()
 ```
-### selectÏà¹Ø
+### selectç›¸å…³
 ```
 ### order by
 select * from flights order by origin
@@ -362,36 +362,36 @@ flights.query.filter(and_(flights.origin == 'Paris',flights.duration >500)).all(
 ### join
 db.session.query(Flights,Passengers).filter(Flight.id == Passenger.flight_id).all()
 ```
-### ²È¿ÓÖ¸ÄÏ  
-1. »ù±¾ÉÏ£¬´øÏÂ»®ÏßµÄ¹Ì¶¨±äÁ¿Ãû¶¼ÊÇË«ÏÂ»®Ïß  
-model.pyÖĞµÄ__tablename__  
-create.pyÖĞµÄ__name__
+### è¸©å‘æŒ‡å—  
+1. åŸºæœ¬ä¸Šï¼Œå¸¦ä¸‹åˆ’çº¿çš„å›ºå®šå˜é‡åéƒ½æ˜¯åŒä¸‹åˆ’çº¿  
+model.pyä¸­çš„__tablename__  
+create.pyä¸­çš„__name__
 
 ```
-#ModelµÄMÇë´óĞ´...
+#Modelçš„Mè¯·å¤§å†™...
 class Passenger(db.Model):
     __tablename__ = "passengers"
 
 app = Flask(__name__)
 ```
-1. AttributeError ¶à°ëÊÇos.getenv("DATABASE_URL")Ê§Ğ§
+1. AttributeError å¤šåŠæ˜¯os.getenv("DATABASE_URL")å¤±æ•ˆ
 AttributeError: 'NoneType' object has no attribute 'drivername' for Flask Web App  
 ```
-#ÅäÖÃÊı¾İ¿âĞÅÏ¢
+#é…ç½®æ•°æ®åº“ä¿¡æ¯
 DATABASE_URL='postgresql+psycopg2://postgres:postgres@127.0.0.1:5432/lecture4'
 #app.config["SQLALCHEMY_DATABASE_URI"] = os.getenv("DATABASE_URL")
 app.config["SQLALCHEMY_DATABASE_URI"] = 'postgresql+psycopg2://postgres:postgres@127.0.0.1:5432/lecture4'
 ```
-1. RuntimeError º¯ÊıÖĞÍü¼ÓwithÓï¾ä£¬ĞèÍ¨¹ıwithÉÏÏÂÎÄÀ´È·¶¨×÷ÓÃÔÚAPPÉÏÏÂÎÄÇøÓòÄÚµÄ´úÂë.  
+1. RuntimeError å‡½æ•°ä¸­å¿˜åŠ withè¯­å¥ï¼Œéœ€é€šè¿‡withä¸Šä¸‹æ–‡æ¥ç¡®å®šä½œç”¨åœ¨APPä¸Šä¸‹æ–‡åŒºåŸŸå†…çš„ä»£ç .  
 RuntimeError: No application found. Either work inside a view function or push an application context.  
 ```
 if __name__ == "__main__":
-    #¶Ô±Èlesson3-SQL/import.py
-    #Ôö¼ÓÁËwithÓï¾ä
+    #å¯¹æ¯”lesson3-SQL/import.py
+    #å¢åŠ äº†withè¯­å¥
     with app.app_context():
         main()
 ```
-1. ÆäËû¿É²Î¿¼Á´½Óhttps://www.cnblogs.com/wdx520/p/9959658.html
+1. å…¶ä»–å¯å‚è€ƒé“¾æ¥https://www.cnblogs.com/wdx520/p/9959658.html
 
 ## relationship
 
@@ -430,49 +430,49 @@ DELETE delete a resource
 ```
 
 ## JavaScript  
-Ôö¼Ó script ±êÇ© ¼Óalertº¯Êı£¬ÔÚ½øÈëÍøÒ³Ê±»áÏÔÊ¾Í¨Öª£¬Ïê¼ûlecture5/hello0.html   
+å¢åŠ  script æ ‡ç­¾ åŠ alertå‡½æ•°ï¼Œåœ¨è¿›å…¥ç½‘é¡µæ—¶ä¼šæ˜¾ç¤ºé€šçŸ¥ï¼Œè¯¦è§lecture5/hello0.html   
 
 functions  
 events  
 onclick,onmouseover,onkeydown,onkeyup,onload,onblur  
 
-### querySelectorµÄÓÃ·¨  
+### querySelectorçš„ç”¨æ³•  
 document.querySelector('tag')
 document.querySelector('#id')
 document.querySelector('.class')  
 
-È¡±êÇ©£º  
+å–æ ‡ç­¾ï¼š  
 ```
-#È¡±êÇ©button
+#å–æ ‡ç­¾button
 document.querySelector('button')
-@È¡idÎªformµÄ±êÇ©
+@å–idä¸ºformçš„æ ‡ç­¾
 document.querySelector('#form')
 ```
-¼Óº¯Êı£º  
+åŠ å‡½æ•°ï¼š  
 ```
-#ÊÂ¼şonclickµ÷ÓÃº¯Êıcount
+#äº‹ä»¶onclickè°ƒç”¨å‡½æ•°count
 document.querySelector('button').onclick = count;
-#ÊÂ¼şonsubmitµ÷ÓÃº¯Êı£¬ÄÚÈİÔÚ{}Àï
+#äº‹ä»¶onsubmitè°ƒç”¨å‡½æ•°ï¼Œå†…å®¹åœ¨{}é‡Œ
 document.querySelector('#form').onsubmit = function(){ 
   pass 
 };
 ```
-### alertº¯Êı
+### alertå‡½æ•°
 ```
-//×¢Òâ£ºalertº¯ÊıÀïµÄÄÚÈİÒªÓÃ`ÒıÓÃ£¨Êı×Ö1×ó±ßÄÇ¸ö·ûºÅ£¬²»ÊÇµ¥ÒıºÅ'£©
+//æ³¨æ„ï¼šalertå‡½æ•°é‡Œçš„å†…å®¹è¦ç”¨`å¼•ç”¨ï¼ˆæ•°å­—1å·¦è¾¹é‚£ä¸ªç¬¦å·ï¼Œä¸æ˜¯å•å¼•å·'ï¼‰
 alert(`Counter is at ${counter}!`);
 ```
 
-### javascriptÖĞµÄ±äÁ¿¶¨Òå  
+### javascriptä¸­çš„å˜é‡å®šä¹‰  
 const no change later  
-let ÔÚ×î½üµÄÀ¨ºÅÀïÓĞĞ§  
-var ¶Ô±ÈletÔÚ¶à¸öÀ¨ºÅÀïÒ»Ö±ÓĞĞ§  
-Ïê¼ûvariable0.html  
+let åœ¨æœ€è¿‘çš„æ‹¬å·é‡Œæœ‰æ•ˆ  
+var å¯¹æ¯”letåœ¨å¤šä¸ªæ‹¬å·é‡Œä¸€ç›´æœ‰æ•ˆ  
+è¯¦è§variable0.html  
 
-¿ÉÔÚjavascript¿ØÖÆÌ¨½øĞĞdebug  
-chromeä¯ÀÀÆ÷ÓÒ¼ü--¼ì²é--console£¬¿ÉÊäÈëjavascriptÓï¾ä½øĞĞ²âÊÔ 
-Èç  
-document.querySelector('h1')¡£innerhtml  
+å¯åœ¨javascriptæ§åˆ¶å°è¿›è¡Œdebug  
+chromeæµè§ˆå™¨å³é”®--æ£€æŸ¥--consoleï¼Œå¯è¾“å…¥javascriptè¯­å¥è¿›è¡Œæµ‹è¯• 
+å¦‚  
+document.querySelector('h1')ã€‚innerhtml  
 
 
 ## arrow notation syntax  
@@ -498,43 +498,43 @@ get more information from a server even without reloading an entire new page.
 real-time commuication  
 web sockets communicate between server and clients  
 ```
-Ê²Ã´Ê±ºòÓÃappend,innerHTML
+ä»€ä¹ˆæ—¶å€™ç”¨append,innerHTML
 document.querySelector('#votes').append(li);
-Ê²Ã´Ê±ºòĞèÒªcreateElement
+ä»€ä¹ˆæ—¶å€™éœ€è¦createElement
 const li = document.createElement('li');
 ```
 
 
-### ±à¼­¿ì½İ²Ù×÷
-lecture6 scroll.html Àï¸´ÖÆ³ö100¸öË³ĞòµÄ<p>1</p>  
-vs code ÅúÁ¿Ìæ»»/n ÒªÑ¡Ê¹ÓÃÕıÔò±í´ïÊ½  
+### ç¼–è¾‘å¿«æ·æ“ä½œ
+lecture6 scroll.html é‡Œå¤åˆ¶å‡º100ä¸ªé¡ºåºçš„<p>1</p>  
+vs code æ‰¹é‡æ›¿æ¢/n è¦é€‰ä½¿ç”¨æ­£åˆ™è¡¨è¾¾å¼  
 
-# JavaScriptÄ£°å
+# JavaScriptæ¨¡æ¿
 
 ##  CSS Animation
-Í¨¹ı¿ØÖÆcssÊôĞÔ´ÓÒ»ÖÖ±äÎªÁíÒ»ÖÖ£¬ÊµÏÖ¶¯»­Ğ§¹û£¬¼ûanimate0.htmlµÈ  
-ÈçºÎÍ¨¹ı³ÌĞò¿ØÖÆ¶¯»­µÄÏÔÊ¾--use javascript  
---<svg>¼ÓÒ»Ğ©ÏßÌõ£¬Í¼ĞÎ  
-D3 ÓÃÓÚ¿ÉÊÓ»¯Êı¾İ  
-´´½¨Í¼ĞÎ£¬Í¼±í£¬¶¯»­ 
-D3 ÈëÃÅÍøÖ· https://cloud.tencent.com/developer/article/1567680   
+é€šè¿‡æ§åˆ¶csså±æ€§ä»ä¸€ç§å˜ä¸ºå¦ä¸€ç§ï¼Œå®ç°åŠ¨ç”»æ•ˆæœï¼Œè§animate0.htmlç­‰  
+å¦‚ä½•é€šè¿‡ç¨‹åºæ§åˆ¶åŠ¨ç”»çš„æ˜¾ç¤º--use javascript  
+--<svg>åŠ ä¸€äº›çº¿æ¡ï¼Œå›¾å½¢  
+D3 ç”¨äºå¯è§†åŒ–æ•°æ®  
+åˆ›å»ºå›¾å½¢ï¼Œå›¾è¡¨ï¼ŒåŠ¨ç”» 
+D3 å…¥é—¨ç½‘å€ https://cloud.tencent.com/developer/article/1567680   
 
 # Django  
 similar to flask  
-ÓÃflaskĞèÒª×Ô¼º´î½¨web appliation £¬ÓÃdjangoÓĞ¿ÉÒÔÀûÓÃµÄ°ü¼ò»¯ÊÖ¶¯²Ù×÷  
+ç”¨flaskéœ€è¦è‡ªå·±æ­å»ºweb appliation ï¼Œç”¨djangoæœ‰å¯ä»¥åˆ©ç”¨çš„åŒ…ç®€åŒ–æ‰‹åŠ¨æ“ä½œ  
  
-## °²×°
+## å®‰è£…
 ```
 pip install django==2.1.7 -i https://pypi.tuna.tsinghua.edu.cn/simple --trusted-host pypi.tuna.tsinghua.edu.cn  
-ÑéÖ¤
+éªŒè¯
 >>> import django
 >>> django.get_version()
 ```
-## ÊµÀı
+## å®ä¾‹
 
-1. ½¨Ò»¸öÏîÄ¿
+1. å»ºä¸€ä¸ªé¡¹ç›®
 django-admin startproject projectname
-1. ½¨Ò»¸öÓ¦ÓÃ  
+1. å»ºä¸€ä¸ªåº”ç”¨  
 python manage.py startapp appname
 1. models.py
 
@@ -548,33 +548,33 @@ $ cd mysite
 12494@DESKTOP-DFNAC9K MINGW64 /g/xiazheteng/CS50_Lecture/lecture6-FrontEnds/mysite (master)
 $ ll
 total 1
--rwxr-xr-x 1 12494 197609 684  8ÔÂ 15 08:19 manage.py*
-drwxr-xr-x 1 12494 197609   0  8ÔÂ 15 08:19 mysite/
+-rwxr-xr-x 1 12494 197609 684  8æœˆ 15 08:19 manage.py*
+drwxr-xr-x 1 12494 197609   0  8æœˆ 15 08:19 mysite/
 
 12494@DESKTOP-DFNAC9K MINGW64 /g/xiazheteng/CS50_Lecture/lecture6-FrontEnds/mysite (master)
 
 $ ll
 total 10
--rw-r--r-- 1 12494 197609    0  8ÔÂ 15 08:19 __init__.py
--rw-r--r-- 1 12494 197609  405  8ÔÂ 15 08:19 asgi.py
--rw-r--r-- 1 12494 197609 3191  8ÔÂ 15 08:19 settings.py
--rw-r--r-- 1 12494 197609  769  8ÔÂ 15 08:19 urls.py
--rw-r--r-- 1 12494 197609  405  8ÔÂ 15 08:19 wsgi.py
+-rw-r--r-- 1 12494 197609    0  8æœˆ 15 08:19 __init__.py
+-rw-r--r-- 1 12494 197609  405  8æœˆ 15 08:19 asgi.py
+-rw-r--r-- 1 12494 197609 3191  8æœˆ 15 08:19 settings.py
+-rw-r--r-- 1 12494 197609  769  8æœˆ 15 08:19 urls.py
+-rw-r--r-- 1 12494 197609  405  8æœˆ 15 08:19 wsgi.py
 
 ```
-views.pyÀàËÆÓÚapplication.py  
+views.pyç±»ä¼¼äºapplication.py  
 python manage.py runserver 
 
-## ÅäÖÃÊı¾İ¿âÏà¹Ø
+## é…ç½®æ•°æ®åº“ç›¸å…³
 1. models.py  
-model.pyÖĞÒÔclassµÄ·½Ê½ÅäÖÃÊı¾İ¿â±íµÄĞÅÏ¢£¬Ïê¼ûairline projectÖĞflights app ÏÂµÄÎÄ¼ş[lecture7-Django\airline\flights\models.py]  
+model.pyä¸­ä»¥classçš„æ–¹å¼é…ç½®æ•°æ®åº“è¡¨çš„ä¿¡æ¯ï¼Œè¯¦è§airline projectä¸­flights app ä¸‹çš„æ–‡ä»¶[lecture7-Django\airline\flights\models.py]  
 1. settings.py  
-ĞèÒªÔÚ½¨ÏîÄ¿£¨project£©Ê±Éú³ÉµÄsettingsÀïÅäÖÃappĞÅÏ¢ºÍÊı¾İ¿âĞÅÏ¢
-+ appĞÅÏ¢
-INSTALLED_APPSÀïÓĞÄ¬ÈÏÉú³ÉµÄappĞÅÏ¢£¬ĞèÌí¼Ó×Ô¼º½¨µÄappĞÅÏ¢  
+éœ€è¦åœ¨å»ºé¡¹ç›®ï¼ˆprojectï¼‰æ—¶ç”Ÿæˆçš„settingsé‡Œé…ç½®appä¿¡æ¯å’Œæ•°æ®åº“ä¿¡æ¯
++ appä¿¡æ¯
+INSTALLED_APPSé‡Œæœ‰é»˜è®¤ç”Ÿæˆçš„appä¿¡æ¯ï¼Œéœ€æ·»åŠ è‡ªå·±å»ºçš„appä¿¡æ¯  
 ```
 INSTALLED_APPS = [
-    'flights.apps.FlightsConfig',#Ìí¼Ó×Ô¼º½¨µÄappĞÅÏ¢£¬appÃû.apps.ÎÄ¼şÀïµÄclassÃû
+    'flights.apps.FlightsConfig',#æ·»åŠ è‡ªå·±å»ºçš„appä¿¡æ¯ï¼Œappå.apps.æ–‡ä»¶é‡Œçš„classå
     'django.contrib.admin',
     'django.contrib.auth',
     'django.contrib.contenttypes',
@@ -583,32 +583,32 @@ INSTALLED_APPS = [
     'django.contrib.staticfiles',
 ]
 ```
-+ Êı¾İ¿âĞÅÏ¢
-djangoµÄÄ¬ÈÏÊı¾İ¿âÎªsqlite3£¬Èç¸ÄÆäËûÊı¾İ¿âĞèÅäÖÃ£¬ÈçÅäÖÃpostgresÈçÏÂ£º  
-×¢ÊÍµÄÁ½ĞĞÎªÔ­Ä¬ÈÏÊı¾İ¿â  
++ æ•°æ®åº“ä¿¡æ¯
+djangoçš„é»˜è®¤æ•°æ®åº“ä¸ºsqlite3ï¼Œå¦‚æ”¹å…¶ä»–æ•°æ®åº“éœ€é…ç½®ï¼Œå¦‚é…ç½®postgreså¦‚ä¸‹ï¼š  
+æ³¨é‡Šçš„ä¸¤è¡Œä¸ºåŸé»˜è®¤æ•°æ®åº“  
 ```
 DATABASES = {
     'default': {
         #'ENGINE': 'django.db.backends.sqlite3',
         #'NAME': os.path.join(BASE_DIR, 'db.sqlite3'),
         'ENGINE': 'django.db.backends.postgresql_psycopg2',
-        'NAME': 'lecture7', #Êı¾İ¿âÃû×Ö
-        'USER': 'postgres', #ÓÃ»§Ãû
-        "PASSWORD" : 'postgres', #×Ô¼ºµÄÃÜÂë
+        'NAME': 'lecture7', #æ•°æ®åº“åå­—
+        'USER': 'postgres', #ç”¨æˆ·å
+        "PASSWORD" : 'postgres', #è‡ªå·±çš„å¯†ç 
         "HOST":'127.0.0.1',
         'PORT':5432,
     }
 }
 ```
-1. Ïà¹ØÁ´½Ó  
-ÎªÊ²Ã´Ê¹ÓÃmakemigrationsÌáÊ¾No changes detected [http://blog.itpub.net/69923331/viewspace-2659047/]
+1. ç›¸å…³é“¾æ¥  
+ä¸ºä»€ä¹ˆä½¿ç”¨makemigrationsæç¤ºNo changes detected [http://blog.itpub.net/69923331/viewspace-2659047/]
 
-### Êı¾İÇ¨ÒÆ²Ù×÷
-1. ÔËĞĞÒªÏÈÖ´ĞĞ./manage.py makemigrations appÃû  
-Éú³É0001_initial.py  
-1. ÈçÏë²é¿´SQLÓï¾ä
-Ö´ĞĞ ./manage.py sqlmigrate flights 0001  
-»áÉú³ÉsqlÓï¾ä  
+### æ•°æ®è¿ç§»æ“ä½œ
+1. è¿è¡Œè¦å…ˆæ‰§è¡Œ./manage.py makemigrations appå  
+ç”Ÿæˆ0001_initial.py  
+1. å¦‚æƒ³æŸ¥çœ‹SQLè¯­å¥
+æ‰§è¡Œ ./manage.py sqlmigrate flights 0001  
+ä¼šç”Ÿæˆsqlè¯­å¥  
 ```
 $ ./manage.py sqlmigrate flights 0001
 BEGIN;
@@ -619,7 +619,7 @@ CREATE TABLE "flights_flight" ("id" serial NOT NULL PRIMARY KEY, "origin" varcha
 COMMIT;
 
 ```
-1. applyÇ¨ÒÆ£¬¼´Íê³ÉÊı¾İ¿âÖĞ´´½¨±í  
+1. applyè¿ç§»ï¼Œå³å®Œæˆæ•°æ®åº“ä¸­åˆ›å»ºè¡¨  
 python manage.py migrate  
 ```
 $ ./manage.py migrate
@@ -644,42 +644,42 @@ Running migrations:
   Applying sessions.0001_initial... OK
 
 ```
-Ö´ĞĞºó£¬ÔÙÔÚpostgresÊı¾İ¿âÖĞ\d²é¿´µÄ»°£¬¾Í¿ÉÒÔ¿´µ½Êı¾İ  
+æ‰§è¡Œåï¼Œå†åœ¨postgresæ•°æ®åº“ä¸­\dæŸ¥çœ‹çš„è¯ï¼Œå°±å¯ä»¥çœ‹åˆ°æ•°æ®  
 ```
 lecture7=# \d
-                             ¹ØÁªÁĞ±í
- ¼Ü¹¹Ä£Ê½ |               Ãû³Æ                |  ÀàĞÍ  |  ÓµÓĞÕß
+                             å…³è”åˆ—è¡¨
+ æ¶æ„æ¨¡å¼ |               åç§°                |  ç±»å‹  |  æ‹¥æœ‰è€…
 ----------+-----------------------------------+--------+----------
- public   | auth_group                        | Êı¾İ±í | postgres
- public   | auth_group_id_seq                 | ĞòÁĞÊı | postgres
- public   | auth_group_permissions            | Êı¾İ±í | postgres
- public   | auth_group_permissions_id_seq     | ĞòÁĞÊı | postgres
- public   | auth_permission                   | Êı¾İ±í | postgres
- public   | auth_permission_id_seq            | ĞòÁĞÊı | postgres
- public   | auth_user                         | Êı¾İ±í | postgres
- public   | auth_user_groups                  | Êı¾İ±í | postgres
- public   | auth_user_groups_id_seq           | ĞòÁĞÊı | postgres
- public   | auth_user_id_seq                  | ĞòÁĞÊı | postgres
- public   | auth_user_user_permissions        | Êı¾İ±í | postgres
- public   | auth_user_user_permissions_id_seq | ĞòÁĞÊı | postgres
- public   | django_admin_log                  | Êı¾İ±í | postgres
- public   | django_admin_log_id_seq           | ĞòÁĞÊı | postgres
- public   | django_content_type               | Êı¾İ±í | postgres
- public   | django_content_type_id_seq        | ĞòÁĞÊı | postgres
- public   | django_migrations                 | Êı¾İ±í | postgres
- public   | django_migrations_id_seq          | ĞòÁĞÊı | postgres
- public   | django_session                    | Êı¾İ±í | postgres
- public   | flights_flight                    | Êı¾İ±í | postgres
- public   | flights_flight_id_seq             | ĞòÁĞÊı | postgres
-(21 ĞĞ¼ÇÂ¼)
+ public   | auth_group                        | æ•°æ®è¡¨ | postgres
+ public   | auth_group_id_seq                 | åºåˆ—æ•° | postgres
+ public   | auth_group_permissions            | æ•°æ®è¡¨ | postgres
+ public   | auth_group_permissions_id_seq     | åºåˆ—æ•° | postgres
+ public   | auth_permission                   | æ•°æ®è¡¨ | postgres
+ public   | auth_permission_id_seq            | åºåˆ—æ•° | postgres
+ public   | auth_user                         | æ•°æ®è¡¨ | postgres
+ public   | auth_user_groups                  | æ•°æ®è¡¨ | postgres
+ public   | auth_user_groups_id_seq           | åºåˆ—æ•° | postgres
+ public   | auth_user_id_seq                  | åºåˆ—æ•° | postgres
+ public   | auth_user_user_permissions        | æ•°æ®è¡¨ | postgres
+ public   | auth_user_user_permissions_id_seq | åºåˆ—æ•° | postgres
+ public   | django_admin_log                  | æ•°æ®è¡¨ | postgres
+ public   | django_admin_log_id_seq           | åºåˆ—æ•° | postgres
+ public   | django_content_type               | æ•°æ®è¡¨ | postgres
+ public   | django_content_type_id_seq        | åºåˆ—æ•° | postgres
+ public   | django_migrations                 | æ•°æ®è¡¨ | postgres
+ public   | django_migrations_id_seq          | åºåˆ—æ•° | postgres
+ public   | django_session                    | æ•°æ®è¡¨ | postgres
+ public   | flights_flight                    | æ•°æ®è¡¨ | postgres
+ public   | flights_flight_id_seq             | åºåˆ—æ•° | postgres
+(21 è¡Œè®°å½•)
 ```
 ### django's shell
-ÔÚÕâÀï¿ÉÒÔÔËĞĞpythonÓï¾ä  
+åœ¨è¿™é‡Œå¯ä»¥è¿è¡Œpythonè¯­å¥  
 python manage.py shell    
-import Ä£ĞÍ£¬¾ßÌåÃüÁîÊÇ from flights.models import Flight£¬flights ÊÇÄã´´½¨µÄ APP£¬Flight ÊÇÄãµÄÄ£ĞÍ  
+import æ¨¡å‹ï¼Œå…·ä½“å‘½ä»¤æ˜¯ from flights.models import Flightï¼Œflights æ˜¯ä½ åˆ›å»ºçš„ APPï¼ŒFlight æ˜¯ä½ çš„æ¨¡å‹  
 
 f = Flight(origin = "New York",destination="London",duration=415)  
-** Óï¾äºó¼Ó¿Õ¸ñ£¬codeÀïĞ´ºÃºóÔÙÕ³Èë** 
+** è¯­å¥ååŠ ç©ºæ ¼ï¼Œcodeé‡Œå†™å¥½åå†ç²˜å…¥** 
 ``` 
 In [1]: from flights.models import Airport,Flight
 
@@ -700,20 +700,20 @@ Out[8]: <Airport: Airport object (1)>
 
 quit()
 ```
-### ÅäAdmin
-appµÄadmin.pyÀï×¢²á×Ô¼ºµÄmodel  
-È»ºó´´½¨¹ÜÀíÓÃ»§£¨ÓÃµçÄÔµÄcmd´°¿Ú£©  
-ÉèÖÃÓÃ»§Ãû£¬ÓÊÏä£¬ÃÜÂë
+### é…Admin
+appçš„admin.pyé‡Œæ³¨å†Œè‡ªå·±çš„model  
+ç„¶ååˆ›å»ºç®¡ç†ç”¨æˆ·ï¼ˆç”¨ç”µè„‘çš„cmdçª—å£ï¼‰  
+è®¾ç½®ç”¨æˆ·åï¼Œé‚®ç®±ï¼Œå¯†ç 
 python manage.py createsuperuser  
-ÔÙ½øÈëhttp://127.0.0.1:8000/admin ¼´¿É½øÈë×Ô´øµÄ¹ÜÀí½çÃæ   
+å†è¿›å…¥http://127.0.0.1:8000/admin å³å¯è¿›å…¥è‡ªå¸¦çš„ç®¡ç†ç•Œé¢   
 
-### Ôö¼ÓURL
-ÏÈÔÚappµÄurls.pyÀï¼Ópath  
-pathÀï¶ÔÓ¦µÄÏà¼ÓµÄrouteÔÙÈ¥view.pyÀï¼Ódef routeº¯Êı  
-º¯ÊıÀï¼ÓµÄäÖÈ¾µÄhtmlÔÙÈ¥templateÀï°´Â·¾¶¼Ó
+### å¢åŠ URL
+å…ˆåœ¨appçš„urls.pyé‡ŒåŠ path  
+pathé‡Œå¯¹åº”çš„ç›¸åŠ çš„routeå†å»view.pyé‡ŒåŠ def routeå‡½æ•°  
+å‡½æ•°é‡ŒåŠ çš„æ¸²æŸ“çš„htmlå†å»templateé‡ŒæŒ‰è·¯å¾„åŠ 
 
-### Ôö¼Ó¶à¶Ô¶à¹ØÏµµÄ±í
-Ïê¼ûmodelsÀïµÄclass Passenger
+### å¢åŠ å¤šå¯¹å¤šå…³ç³»çš„è¡¨
+è¯¦è§modelsé‡Œçš„class Passenger
 ```
 G:\xiazheteng\CS50_Lecture\lecture7-Django\airline>python manage.py makemigrations
 Migrations for 'flights':
@@ -734,9 +734,9 @@ CREATE INDEX "flights_passenger_flights_passenger_id_71f15407" ON "flights_passe
 CREATE INDEX "flights_passenger_flights_flight_id_0c808a26" ON "flights_passenger_flights" ("flight_id");
 COMMIT;
 ```
-»á½¨Á¢Á½¸ö±í  
-Ò»¸öÊÇflights_passenger£¬¹ÜÀípassenger  
-Ò»¸öÊÇflights_passenger_flights , mapping individual passenger to individual flights
+ä¼šå»ºç«‹ä¸¤ä¸ªè¡¨  
+ä¸€ä¸ªæ˜¯flights_passengerï¼Œç®¡ç†passenger  
+ä¸€ä¸ªæ˜¯flights_passenger_flights , mapping individual passenger to individual flights
 ```
 In [2]: from flights.models import Passenger,Flight
 
@@ -761,21 +761,21 @@ In [14]: f.passengers.all()
 Out[14]: <QuerySet [<Passenger: Alice  Adams>]>
 
 ```
-djangoÖĞÈç¹ûĞèÒª´¦ÀíformÀà£¬ĞèÒª¶îÍâ¼ÓÒ»Ğ©Óï¾ä£¬±ÜÃâ³öÏÖÈçÏÂµÄ403´íÎó£º  
+djangoä¸­å¦‚æœéœ€è¦å¤„ç†formç±»ï¼Œéœ€è¦é¢å¤–åŠ ä¸€äº›è¯­å¥ï¼Œé¿å…å‡ºç°å¦‚ä¸‹çš„403é”™è¯¯ï¼š  
 Forbidden (403)  
 CSRF verification failed. Request aborted.  
 
 ## Django's log in and authentication system
 /admin  
-Ìí¼ÓÓÃ»§  
-1.½øÈë¹ÜÀí¶Ë£¬Ç°ÌáÊÇ½¨Á¢ÁËsuperuser account  
+æ·»åŠ ç”¨æˆ·  
+1.è¿›å…¥ç®¡ç†ç«¯ï¼Œå‰ææ˜¯å»ºç«‹äº†superuser account  
 2.pyhton manage.py shell  
 ```
 In [1]: from django.contrib.auth.models import User
 
 In [3]: user = User.objects.create_user("Alice","alice@sth.com","Alice12345")
 
-In [4]: user.first_name="Alice"#¿ÉÒÔÔÙ´ÎĞŞ¸ÄÃû×Ö
+In [4]: user.first_name="Alice"#å¯ä»¥å†æ¬¡ä¿®æ”¹åå­—
 
 In [5]: user.save()
 
@@ -788,9 +788,9 @@ But in django,URLs are seperated in apps.
 And the urls are defined in urls.py with a form of [path("", views.index, name = 'index')]   
 using reverse, to extract the route from having a name.
 
-## ±¨´í
+## æŠ¥é”™
 You are seeing this page because DEBUG=True is in your settings file and you have not configured any URLs.  
-ĞèÒªÔÚ´´½¨ÏîÄ¿Ê±Éú³ÉµÄÎÄ¼ş¼ĞÏÂµÄurls.pyÀïÅäÖÃurl
+éœ€è¦åœ¨åˆ›å»ºé¡¹ç›®æ—¶ç”Ÿæˆçš„æ–‡ä»¶å¤¹ä¸‹çš„urls.pyé‡Œé…ç½®url
 ```
 from django.contrib import admin
 from django.urls import include,path
@@ -802,11 +802,11 @@ urlpatterns = [
 
 ```
 
-admin¿ÉÒÔÌí¼ÓÀà£¬À´µ÷Õû½çÃæÏÔÊ¾£¬¼ûlecture8ÏÂairlineÏîÄ¿µÄadmin.py  
-ÔõÃ´¼ÓcssµÈÎÄ¼ş  
+adminå¯ä»¥æ·»åŠ ç±»ï¼Œæ¥è°ƒæ•´ç•Œé¢æ˜¾ç¤ºï¼Œè§lecture8ä¸‹airlineé¡¹ç›®çš„admin.py  
+æ€ä¹ˆåŠ cssç­‰æ–‡ä»¶  
 
 # Testing  
-flights appÏÂÓĞÒ»¸ötests.py  
+flights appä¸‹æœ‰ä¸€ä¸ªtests.py  
 python manage.py test  
 CI/CD  
 CI tools  
@@ -824,9 +824,61 @@ install :
 script:
   - python manage.py test
 ```
-# githunb²Ù×÷
-½øÈëgithub classroomÍøÒ³  
-µãfork´´½¨×Ô¼ºµÄ·ÖÖ§  
-¿ËÂ¡µ½×Ô¼ºµÄÄ¿Â¼ `` git clone https://github.com/junxiuliu/classroom.git ``  
+# githunbæ“ä½œ
+è¿›å…¥github classroomç½‘é¡µ  
+ç‚¹forkåˆ›å»ºè‡ªå·±çš„åˆ†æ”¯  
+å…‹éš†åˆ°è‡ªå·±çš„ç›®å½• `` git clone https://github.com/junxiuliu/classroom.git ``  
+```
+git checkout -b 
+git checkout: select a branch and active it
+-b: create the branch at the same time
+```
+```
+12494@DESKTOP-DFNAC9K MINGW64 /g/A_study/CS50_Lecture (master)
+$ git checkout -b ljx
+Switched to a new branch 'ljx'
+```
 
+# Travis CI 
+CI:Continuous Integretion æŒç»­é›†æˆ  
+ä»»ä½•äººå¯¹ä»£ç åº“çš„ä»»ä½•æ”¹åŠ¨ï¼Œéƒ½ä¼šè§¦å‘CIæœåŠ¡å™¨è‡ªåŠ¨å¯¹é¡¹ç›®è¿›è¡Œæ„å»ºï¼Œè‡ªåŠ¨è¿è¡Œæµ‹è¯•ï¼Œç”šè‡³è‡ªåŠ¨éƒ¨ç½²åˆ°æµ‹è¯•ç¯å¢ƒ  
+Travis CIæ˜¯åœ¨çº¿æ‰˜ç®¡çš„CIæœåŠ¡ï¼Œç”¨Travisæ¥è¿›è¡ŒæŒç»­é›†æˆï¼Œä¸éœ€è¦è‡ªå·±æ­æœåŠ¡å™¨ï¼Œåœ¨ç½‘é¡µä¸Šç‚¹å‡ ä¸‹å°±å¥½ï¼Œç”¨èµ·æ¥æ›´æ–¹ä¾¿ã€‚æœ€é‡è¦çš„æ˜¯ï¼Œå®ƒå¯¹å¼€æºé¡¹ç›®æ˜¯å…è´¹çš„  
 
+# Scalability
+## èƒŒæ™¯å¼•å…¥
+å½“å¤§é‡ç”¨æˆ·åŒæ—¶æ¥å…¥æœåŠ¡å™¨æ—¶  
+**benchmarking**: figure out how much your server can actually handle  
+å³load test or stress testï¼Œfind the limit of your server  
+**vertical scaling** æ‰©å¤§å†…å­˜  
+**horizantal scaling** å¢åŠ æœåŠ¡å™¨æ•°é‡  
+å‡å¦‚ç°åœ¨æœ‰ä¸¤ä¸ªæœåŠ¡å™¨ï¼Œç”¨æˆ·è®¿é—®æ—¶ï¼Œéœ€è¦ç¡®å®šæ¥å…¥åˆ°å“ªä¸ªæœåŠ¡å™¨ä¸Šï¼Œè¿™æ—¶éœ€è¦ä¸€ä¸ªè´Ÿè½½å‡è¡¡å™¨  
+**load balancer** è´Ÿè½½å‡è¡¡å™¨  
+**load balancing methods**
+   + random choice:éšæœºé€‰æ‹©
+   + round Robin:å¾ªç¯é€åˆ°ä¸åŒæœåŠ¡å™¨
+   + fewest connections:check the server é€åˆ°è´Ÿè½½æœ€å°‘çš„
+**session-aware load balancing**:ä¼šè¯æ„ŸçŸ¥è´Ÿè½½
+   + sticky session:å½“ç”¨æˆ·ç¬¬äºŒæ¬¡è®¿é—®serveræ—¶ï¼ŒæŒ‡å‘ç¬¬ä¸€æ¬¡è®¿é—®çš„çš„server
+   + sessions in database:å­˜å‚¨ä¿¡æ¯åˆ°ä¸€ä¸ªserverAå’ŒserverBéƒ½èƒ½è®¿é—®çš„database,ç¼ºç‚¹ï¼šæ—¶é—´å»¶è¿Ÿï¼Œæ•°æ®åº“çš„å¯æ‰©å±•
+   + cleint-side sessons:ä¸åœ¨web serverå­˜å‚¨sessionè€Œæ˜¯åœ¨clientç«¯å­˜å‚¨session,é€šå¸¸æ˜¯é€šè¿‡cookieså®Œæˆçš„
+## Autoscaling
+æ ¹æ®æµé‡traficè‡ªåŠ¨å¢åŠ æˆ–å‡å°‘serverçš„æ•°é‡  
+æŒ‡å®šæœ€å°‘serverå’Œæœ€å¤§serverçš„æ•°é‡ï¼Œç”±load balanceè‡ªåŠ¨åˆ¤æ–­  
+
+## Database Partitioning
+vertical partitioning:æŠŠè¡¨æ‹†å¼€ï¼Œä¸€ä¸ªè¡¨ä¸è¦æœ‰è¿‡å¤šçš„åˆ—  
+horizontal partitioning:è¡¨çš„è¡Œè¿›è¡Œæ‹†åˆ†ï¼Œä¾‹å¦‚filghtsæ‹†åˆ†ä¸ºflights_domesticå’Œflights_internationalï¼Œä¸¤ä¸ªè¡¨æ‹¥æœ‰åŒæ ·çš„åˆ—  
+## database replication  
+   + single-primary replication:ä¸€ä¸ªæ•°æ®åº“ä¸ºä¸»æ•°æ®åº“ï¼Œå…¶ä»–æ•°æ®åº“ä¸ºè¾…æ•°æ®åº“ï¼Œè¾…åŠ©æ•°æ®åº“åªèƒ½è¿›è¡Œreadæ“ä½œï¼Œä¸»æ•°æ®åº“å¯ä»¥å®ç°read,writeæ“ä½œ,å½“ä¸»æ•°æ®åº“è¿›è¡Œäº†add or updateç­‰å†™æ“ä½œåï¼Œupdateå…¶ä»–çš„è¾…æ•°æ®åº“ã€‚  
+   + multi-primary replication:å¤šä¸ªæ•°æ®åº“ä¸ºä¸»æ•°æ®åº“
+## caching
+1. client-side catching
+HTTP header é‡ŒåŠ å…¥ cache-control:max-age=86400 æ§åˆ¶ç¼“å­˜æ›´æ–°çš„æ—¶é—´  
+cache-control:max-age=86400  
+Etag: "51489546224762"  
+when the user is trying to request the page,ç”¨æˆ·å¯ä»¥åŒæ—¶å‘é€Etag(send alng the Etag),serveråˆ¤æ–­æ˜¯å¦ä¸latest resource çš„ Etag åŒ¹é…ï¼Œå¦‚æœåŒ¹é…ï¼Œserverä¸€èˆ¬ä¼šè¿”å›304çš„status codeï¼ˆè¡¨ç¤ºæœªä¿®æ”¹ï¼‰ï¼Œè¡¨ç¤ºè¯·æ±‚å¹¶æ²¡æœ‰å˜åŒ–ï¼Œgo ahead and use the cache version  
+å®¢æˆ·ç«¯ç¼“å­˜çš„ä¼˜ç‚¹ï¼š
+1.å¯¹ç”¨æˆ·æ¥è¯´ï¼Œæ›´å¿«  
+2.ä»è´Ÿè½½çš„è§’åº¦ï¼Œå½“ç”¨æˆ·è®¿é—®æ•°é‡è¿‡å¤šæ—¶ï¼Œå¯ä»¥åˆ¤æ–­éƒ¨åˆ†ç”¨æˆ·ä¸éœ€è¦æ–°çš„è®¿é—®ï¼Œå‡å°‘è´Ÿè½½  
+1. server-side catching
+å¯åœ¨HTTP headeré‡Œæ§åˆ¶ private catching or publich catching
