--- a/CS50 -笔记.md
+++ b/CS50 -笔记.md
@@ -915,4 +915,18 @@ API keys
 1. Rate Limiting 限制速率
 1. Route Authentication 身份验证：发送request时同时发送API key，系统检查key来检查用户是否有访问权限  
 ## Java Script
+write code in the client side ,running inside the user's browsers and not on the server where Flask or Django was running  
+cross-site scripting跨站点脚本  
+javascript可能会发生代码注入
+```
+@app.errorhandler(404)
+def page_not_fund(e):
+   return "Not Found: "+ request.path
 
+```
+127.0.0.1:5000/<script>alert{'hi'}</script>  
+关闭chrome安全模式cross-site scripting审核  
+chrome --disable-xss-auditor  
+
+
+## Django
